--- a/views/backend/meta.ejs
+++ b/views/backend/meta.ejs
@@ -2,6 +2,8 @@
 <html lang="zh-CN">
 
 <head>
+
+
 	<meta charset="utf-8" />
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
@@ -30,5 +32,16 @@
   <script src="js/html5shiv.js"></script>
   <script src="js/excanvas.js"></script>
   <![endif]-->
+  
+  
+	<!--[if IE]>
+	<script type="text/javascript">
+	    // Fix for IE ignoring relative base tags.
+	    (function() {
+	        var baseTag = document.getElementsByTagName('base')[0];
+	        baseTag.href = baseTag.href;
+	    })();
+	</script>
+	<![endif]-->
 
 	<!-- JavaScript -->
