--- a/views/career.html
+++ b/views/career.html
@@ -364,6 +364,9 @@
 		</style>
 		<style>
 		@media only screen and (max-width:825px){
+		    .nav{
+                margin:0;
+            }
 			.page-width{width:320px!important;margin:auto;}
 			.module-overlay-cover,
 			.home-banner{
