--- a/views/contact.html
+++ b/views/contact.html
@@ -358,6 +358,41 @@
 		
 		<style>
 		@media only screen and (max-width:825px){
+		    .nav{
+                margin:0;
+            }
+            .heading--feature{
+                margin-top:10px;
+                margin-left:40px;
+            }
+            .heading--feature > p{
+                font-size:50%;
+                margin:0;
+            }
+            .heading--feature::before{
+                font-size:100%;
+            }
+            .main footer{
+                top:70px;
+                padding:5px;
+            }
+            .contact li{
+                font-size:10px;
+                line-height:22px;
+            }
+            .contact li.pull-right{
+                margin:0;
+                padding-left:25px;
+                font-size:10px;
+                
+            }
+            .contact li a{
+                font-size:10px;
+                line-height:22px;
+            }
+            .contact li p{
+                margin:0;
+            }
 			.page-width{width:320px!important;margin:auto;}
 			.module-overlay-cover,
 			.home-banner{
