--- a/views/detail.html
+++ b/views/detail.html
@@ -325,6 +325,12 @@
 		
 		<style>
 		@media only screen and (max-width:825px){
+		    .nav{
+                margin:0;
+            }
+            [class^=icon-]{
+                font-size:10px !important;
+            }
 			.page-width{width:320px!important;margin:auto;}
 			.module-overlay-cover,
 			.home-banner{
